Fixes hexagon size issue on IE

--- a/src/scss/books.scss
+++ b/src/scss/books.scss
@@ -128,6 +128,7 @@ svg.book-contents-icon {
 
 svg.book-page-icon {
   width:40px;
+  height:50px;
 
   polygon {
     fill: $phy_burgundy;
